# secim_experiment

./: .gitignore  README.md  kudoboard_1683321493153.jpg2  main.py  pyproject.toml
.github/: pull_request_template.md
training_pipeline/utils/: io_utils.py
utils/: file_utils.py  str_utils.py  text_extraction_utils.py  turkish_numbers.py
