[tool.poetry]
name = "example_template"
version = "1.0.0"
description = "This is for me"
authors = ["Samet <smttsp>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.7.1"
numpy = "^1.24.2"
pandas = "^1.5.3"
colorama = "^0.4.6"
tqdm = "^4.65.0"
ruff = "^0.0.267"
google-cloud-vision = "^3.4.1"
google-cloud-storage = "^2.9.0"
opencv-python = "^4.7.0.72"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.21.0"
click = "^8.1.3"
black = "^24.3.0"
bs4 = "^0.0.1"
selenium = "^4.9.1"
webdriver-manager = "^3.8.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py38"]
exclude = '''
/(
    \.git
  | \.venv
  | \.direnv
  | _build
  | build
  | dist
  | \.env
  | \.vscode
  | \.cache
  | github
  | __pycache__
  | .cloudignore
)/
'''

[tool.isort]
py_version = "38"
line_length = 100
lines_after_imports = 2
lines_between_sections = 1
multi_line_output = 3
force_grid_wrap = 0
include_trailing_comma = "true"
combine_as_imports = "true"
use_parentheses = "true"
skip = ["./docs", ".direnv"]
skip_glob = ["*/__init__.py"]
skip_gitignore = "true"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"

[tool.pytest.ini_options]
minversion = "6.1"
addopts = "--cov"
testpaths = [
    "tests_unit",
]
